# Integrador_03_Henry

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt  test_queries.json
data/finance_docs/: reglamento_financiero.txt
data/hr_docs/: manual_politicas_hr.txt
data/tech_docs/: manual_procedimientos_tech.txt
src/: config.py  database.py  evaluator.py  generate_knowledge.py  multi_agent_system.py
src/agents/: clarification_agent.py  evaluator.py  finance_agent.py  hr_agent.py  orchestrator.py  tech_agent.py
